working on the web pages javascript adding kendo

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
       <ul id="messages"></ul>
     </div>
 
+    <!-- Script References -->
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2016.2.714/js/kendo.all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
+    <script src="/socketHelper.js"></script>
+    <script src="/index.js"></script>
 
     <script>
       var socket = io();
